--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
+spring.datasource.url=jdbc:h2:mem:testdb
 spring.h2.console.enabled=true
-spring.h2.console.path=h2-console
+spring.h2.console.path=/h2-console
+spring.datasource.password=mrHyde
+spring.datasource.username=drJekyll
+
+spring.jpa.show-sql=true
