--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,5 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.datasource.password=mrHyde
 spring.datasource.username=drJekyll
-
+server.port=8081
 spring.jpa.show-sql=true
