Adds Application name.

--- a/src/main/resources/application-cloud.properties
+++ b/src/main/resources/application-cloud.properties
@@ -7,3 +7,4 @@ spring.datasource.password=eb525558
 spring.datasource.username=bfad62e0f91874
 
 spring.jpa.show-sql=true
+spring.application.name=stock-symbol-service
